--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,12 @@
         "symfony/http-foundation": "2.5.*",
         "symfony/http-kernel": "2.3.*",
         "symfony/routing": "2.3.*",
-        "symfony/event-dispatcher": "2.5.*",
-        "phpunit/phpunit": "3.7.*"
+        "symfony/event-dispatcher": "2.5.*"
     },
-    "require-dev": {},
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*",
+        "dompdf/dompdf": "^0.6.1",
+    },
     "license": "MIT",
     "minimum-stability": "dev"
 }
